tests/error/modifier_errors/flags_nested_triple.err
Error: Unitary constraint violation (at $FILE:16:16)
   | 
14 |         with control(ctrl):
15 |             with power(2):
16 |                 foo(q)
   |                 ^^^^^^ This function cannot be called in a unitary context

Guppy compilation failed due to 1 previous error
